# poetry-version-scm

./: LICENSE  pyproject.toml
src/poetry_version_scm/: __init__.py  plugin.py
src/poetry_version_scm/scm/: __init__.py  git.py
