[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-version-scm"
version = "0.1.0.dev0"
description = "Infer package version from SCM tags"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poetry_version_scm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2"

[tool.poetry.plugins."poetry.plugin"]
version-scm = "poetry_version_scm.plugin:VersionScmPlugin"
